[package]
name = "grpc-status"
version = "0.1.0"
authors = ["nbari <nbari@tequila.io>"]
edition = "2018"
documentation = "https://github.com/nbari/grpc-status/blob/master/README.md"
homepage = "https://github.com/nbari/grpc-status"
repository = "https://github.com/nbari/grpc-status"
readme = "README.md"
keywords = ["grpc", "status", "rpc", "endpoint", "cli"]
categories = ["web-programming", "network-programming"]
license = "BSD-3-Clause"

[dependencies]
anyhow = "1"
clap = "2.33"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
