[package]
name = "grpc-status"
version = "0.1.0"
authors = ["nbari <nbari@tequila.io>"]
categories = ["web-programming", "network-programming"]
documentation = "https://github.com/nbari/grpc-status/blob/master/README.md"
description = "gRPC client to retrieve status codes"
edition = "2018"
homepage = "https://github.com/nbari/grpc-status"
keywords = ["grpc", "status", "codes", "endpoint", "cli"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/nbari/grpc-status"

[dependencies]
anyhow = "1"
clap = "2.33"
prost = "0.7"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
